Boolean Parser einfügen Navigations Drawer ausstatten